--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
   <link rel="stylesheet" href="./style.css">
 
 </head>
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1HXQR7K9FV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-1HXQR7K9FV');
+</script>
+
+  
 <body>
 <!-- partial:index.partial.html -->
 <video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/fashion.jpg" playsinline autoplay muted loop>
