--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
 <body>
 <!-- partial:index.partial.html -->
-<video poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/fashion.jpg" playsinline autoplay muted loop>
+<video poster="" playsinline autoplay muted loop>
 <source src="https://cdn.glitch.global/4f8e5f9e-5c4a-46ec-a4cd-f3421074e55e/m.webm" type="video/webm">
 <source src="https://cdn.glitch.me/4f8e5f9e-5c4a-46ec-a4cd-f3421074e55e/m.mp4" type="video/mp4">
 </video>
